[build-system]
requires = ["setuptools>=42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python_dsa"
version = "0.0.1"
description = "Python Data Structures and Algorithms"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Mingchu Xu", email = "mxu.china@gmail.com" }]
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.setuptools]
packages = ["python_dsa"]
package-dir = { "" = "src" }
